Bug 476817 - Cannot delete panel
Summary: Cannot delete panel
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Panel (other bugs)
Version First Reported In: master
Platform: Other Linux
: NOR major
Target Milestone: 1.0
Assignee: Plasma Bugs List
URL:
Keywords: qt6, regression
Depends on:
Blocks:
 
Reported: 2023-11-11 03:27 UTC by Fushan Wen
Modified: 2023-11-12 00:38 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Fushan Wen 2023-11-11 03:27:58 UTC
file:///home/qydw/kde/usr/share/plasma/shells/org.kde.plasma.desktop/contents/configuration/PanelConfiguration.qml:524: TypeError: Property 'internalAction' of object [object Object] is not a function

plasma-desktop at f52731bf7339fcaa6cf1cf51fe446f994b6b61e2
plasma-workspace at 767756d08dd8af4415cdebf661897bc258e78d6f
Comment 1 Bug Janitor Service 2023-11-11 03:50:44 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-workspace/-/merge_requests/3517
Comment 2 Fushan Wen 2023-11-11 04:14:11 UTC
Git commit a9592c671fc6980bb2f1cb474b16f48fab252e42 by Fushan Wen.
Committed on 11/11/2023 at 04:47.
Pushed by fusionfuture into branch 'master'.

shell: set plasmoid context property
Related: bug 476818
FIXED-IN: 6.0

M  +6    -2    shell/panelconfigview.cpp

https://invent.kde.org/plasma/plasma-workspace/-/commit/a9592c671fc6980bb2f1cb474b16f48fab252e42
Comment 3 Fushan Wen 2023-11-12 00:38:52 UTC
Git commit 17ca983bb2838b11635ddb28e2bd541ff1936bae by Fushan Wen.
Committed on 12/11/2023 at 01:37.
Pushed by fusionfuture into branch 'master'.

PanelConfiguration: use context plasmoid property
Related: bug 476818

M  +3    -4    desktoppackage/contents/configuration/PanelConfiguration.qml

https://invent.kde.org/plasma/plasma-desktop/-/commit/17ca983bb2838b11635ddb28e2bd541ff1936bae