shell: set plasmoid context property

BUG: 476817
BUG: 476818
FIXED-IN: 6.0